Fix GitHub icon in footer. Set min footer height on small viewports.

--- a/galaxy/static/less/footer.less
+++ b/galaxy/static/less/footer.less
@@ -154,7 +154,7 @@
         }
         .github-icon i {
             padding-top: 4px;
-            padding-left: 5.5px;
+            padding-left: 6px;
         }
         .linkedin-icon i {
             padding-top: 2px;
@@ -229,5 +229,11 @@
             border-left: none;
             padding-left: 15px;
         }
+    }
+}
+
+@media (max-width: 768px) {
+    #galaxy-footer {
+        min-height: 1200px;
     }
 }
